fixed spacing issues on homepage

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -451,6 +451,8 @@ blockquote {
 
     .page-title__subtitle {
         font-size: 30px;
+        line-height: normal;
+        margin-top: 20px;
     }
 
     .blog-item-box {
